examples/test/testpolicy11713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11713
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key8: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value47
          key42: value43
          key12: value13
      podSelector:
        matchLabels:
          key10: value8
